# desktop-calender-tracking

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  installer_standalone.iss
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
control-app/src/: Main.java
control-app/src/ai/: AIClient.java  AIException.java  AIJsonParser.java  AIPromptManager.java  BaseAIClient.java  EncryptionUtil.java  ModelFetcher.java  OllamaClient.java  OpenAICompatibleClient.java  ProgressCallback.java  SettingsManager.java  prompts.txt
control-app/src/app/: AppLauncher.java  CalendarController.java  CalenderController.java  Main.java  OverlayManager.java
control-app/src/audio/: AudioFileManager.java  AudioPlayerEngine.java  AudioPlayerPanel.java  AudioTrack.java
control-app/src/calendar/: CalendarEngine.java  CalendarQuery.java  CalendarRules.java
control-app/src/calender/: CalendarEngine.java  CalendarQuery.java  CalendarRules.java  CalenderEngine.java  CalenderQuery.java  CalenderRules.java
control-app/src/model/: CalendarModel.java  CalenderModel.java  Event.java
control-app/src/service/: CalendarValidationService.java
control-app/src/state/: AppState.java  UserPrefaces.java
control-app/src/storage/: JsonStore.java
control-app/src/ui/: AIConfigDialog.java  AIProgressDialog.java  AudioPlayerFrame.java  CalendarComponents.java  CalendarFrame.java  CalenderFrame.java  EventDotIcon.java  EventEditor.java  EventListCellRenderer.java  MenuBuilder.java  PreferencesDialog.java
overlay-macos/: Package.swift  README.md  todo.md
overlay-macos/Sources/CalendarOverlay/: AppDelegate.swift  CalendarRenderer.swift  ConfigManager.swift  EventManager.swift  JavaLauncher.swift  OverlayView.swift  OverlayWindow.swift  main.swift
overlay-macos/Sources/CalendarOverlay/Extensions/: ColorExtensions.swift
overlay-macos/Sources/CalendarOverlay/Models/: CalendarEvent.swift  OverlayConfig.swift
overlay-macos/Sources/CalendarOverlay/Resources/: Info.plist
overlay-windows/: CMakeLists.txt  desktop_window.cpp
overlay-windows/include/shared/: calendar_shared.h
overlay-windows/src/: audio_player.cpp  audio_player.h  calendar_render.cpp  calendar_render.h  config.cpp  config.h  desktop_window.cpp  desktop_window.h  event_manager.cpp  event_manager.h  main.cpp  resource.h
scripts/: build-all.bat  build-complete.py  build-cpp.bat  build-java.bat  build-java.py  build-java.sh  build.bat  create_distribution.bat  launch.py  master_build.py  package.py  todo.md  validate_calendar.js
shared/: calendar_schema.json  calendar_schema.md
